

Änderungen
----------
v0.6.0 (07.11.2009)
 * Bugfix for Task #3

v0.5.6 (06.11.2009) (not released)
 * Player statistics supports agegroup in team
v0.5.5 (06.11.2009) (not released)
 * New view for club list
 * Markers changed for profile images from ###PROFILE_FIRST_PICTURE_IMGTAG### to ###PROFILE_FIRSTPICTURE###
 * To show all pictures of a profile use ###PROFILE_PICTURES###
 * Markers changed for match pictures. You have to use ###MATCH_PICTURES### and ###MATCH_FIRSTPICTURE### now.
 * Examples for image output with Lightbox 2 and Galleriffic
 * Competitions: It is now possible to add more then one age group to a competition
 * Teams: It is now possible to set an age group for a team

v0.5.4 (18.10.2009) (not released)
 * Some issues with pointsystem control fixed in league table
 * There is a new HTML-Template example in leaguetable.html to show TableScope-Controls as Select-Boxes.
 * Output of profiles in Team-View changed. This is now full configureable. This is how to change sorting:
{{{
teamview.team.player.options.orderby.PROFILE.LAST_NAME = asc
}}}
 ** Notice: the Subpart-Marker for coach-list changed from ###TEAM_COACHES### to ###TEAM_COACHS###
 * Output of competition logo
 * Matchreport: Output of player names with support of stage_name
 * Matchreport: New marker ###MATCH_DAM_IMAGES### for picture output.
 * Scope will be cached in plugin. New register-value T3SPORTS_SCOPEPARAMS with current Scopevalues. Set scope.noCache=1 to disable this caching.
 * Rendering of team logos changed. Have a look at lib.t3sports.teamLogo
 * Bug 2840858: Agegroup was wrong
 * Some performance improvements

v0.5.3 (06.12.2008)
 * Due to an error the modulmarker ###MARKERMODULE__MATCHHISTORY### was switched back to a simple marker. The subpart is now outside of ###MATCHREPORT###. Have a look at matchreport.html
 * New link ###PROFILE_REFEREEMATCHESLINK### for profile.
 * With new config matchtable.fixedOpponentClub it is possible to matches of clubs against each other