@@ -54,9 +54,8 @@
               <exclude>1</exclude>
               <label>LLL:EXT:cfc_league_fe/locallang_db.xml:plugin.competition.flexform.saison</label>
               <config>
-                <type>group</type>
-                <internal_type>db</internal_type>
-                <allowed>tx_cfcleague_saison</allowed>
+                <type>select</type>
+                <foreign_table>tx_cfcleague_saison</foreign_table>
                 <multiple>0</multiple>
                 <maxitems>200</maxitems>
                 <size>10</size>
@@ -77,9 +76,8 @@
               <exclude>1</exclude>
               <label>LLL:EXT:cfc_league_fe/locallang_db.xml:plugin.competition.flexform.group</label>
               <config>
-                <type>group</type>
-                <internal_type>db</internal_type>
-                <allowed>tx_cfcleague_group</allowed>
+                <type>select</type>
+                <foreign_table>tx_cfcleague_group</foreign_table>
                 <multiple>0</multiple>
                 <maxitems>20</maxitems>
                 <size>5</size>
