@@ -64,6 +64,8 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 <!-- ###CLUBS### end -->
 
+###CLUBMAP###
+
 <!-- ###CLUB_LIST### end -->
 </body>
 </html>
